<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:drawableLeft="@drawable/ic_action_user"
            android:ems="10"
            android:text="satsangi@gmail.com"
            android:hint="User Name"
            android:inputType="textPersonName|textImeMultiLine"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="36dp"
            android:drawableLeft="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="Password"
            android:text="satsangi"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.51" />

        <Button
            android:id="@+id/login"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/roundedbutton"
            android:scrollbars="vertical"
            android:text="Login"
            android:textSize="?attr/dialogPreferredPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="223dp"
            android:layout_height="187dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_pno" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>